ueberzugpp: add alpm/fmt to update source

--- a/archlinuxcn/ueberzugpp/lilac.yaml
+++ b/archlinuxcn/ueberzugpp/lilac.yaml
@@ -17,3 +17,7 @@ update_on:
   - source: alpm
     alpm: opencv
     strip_release: true
+
+  - source: alpm
+    alpm: fmt
+    provided: libfmt.so
