--- a/archlinuxcn/art-rawconverter/PKGBUILD
+++ b/archlinuxcn/art-rawconverter/PKGBUILD
@@ -12,16 +12,19 @@ depends=('opencolorio' 'lensfun' 'libraw' 'exiv2' 'fftw' 'gtk3' 'glibmm' 'gtkmm3
 optdepends=('perl-image-exiftool: metadata support for CR3 images'
 	'art-rawconverter-imageio: add support for additional image formats'
 	'lcms2-ff: lcms2 with fast-float plugin for improved export speed')
-makedepends=('pkgconf' 'cmake' 'git' 'gcc' 'hicolor-icon-theme' 'fakeroot')
+makedepends=('pkgconf' 'cmake' 'hicolor-icon-theme')
 source=("https://bitbucket.org/agriggio/art/downloads/${_pkgname}-${pkgver}.tar.xz")
 sha256sums=('21693473dba473b3e43f025588e3e12552a0c61b783eedb5d29f5f78e4129059')
 options=('!lto')
 
-build() {
-	mkdir build/
-	cd build/
+prepare() {
+	mkdir -p "${_pkgname}-${pkgver}/build/"
+}
 
-	cmake "../${_pkgname}-${pkgver}/" \
+build() {
+	cd "${_pkgname}-${pkgver}/build/"
+
+	cmake .. \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DPROC_TARGET_NUMBER="2" \
@@ -34,10 +37,9 @@ build() {
 }
 
 package() {
-	cd build/
-	make DESTDIR="${pkgdir}" install
+	cd "${_pkgname}-${pkgver}/"
+	make DESTDIR="${pkgdir}" -C build install
 
-	cd "../${_pkgname}-${pkgver}/"
 	install -Dm644 LICENSE.txt -t "${pkgdir}/usr/share/licenses/${pkgname}/"
 	cp -r licenses/* "${pkgdir}/usr/share/licenses/${pkgname}/"
 }
