rune-player-git: rebuild
* Add flutter-common,
      flutter-engine-common-google-bin,
      flutter-engine-linux-google-bin,
      flutter-material-fonts-google-bin,
      flutter-sky-engine-google-bin
  to repo_makedepends

Signed-off-by: Roald Clark <roaldclark@gmail.com>

--- a/archlinuxcn/rune-player-git/lilac.yaml
+++ b/archlinuxcn/rune-player-git/lilac.yaml
@@ -5,7 +5,12 @@ post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
 repo_makedepends:
+  - flutter: flutter-common
+  - flutter: flutter-engine-common-google-bin
+  - flutter: flutter-engine-linux-google-bin
   - flutter: flutter-intellij-patch
+  - flutter: flutter-material-fonts-google-bin
+  - flutter: flutter-sky-engine-google-bin
   - flutter: flutter-target-linux
   - flutter: flutter-tool
   - protoc-gen-dart
@@ -13,6 +18,8 @@ repo_makedepends:
 update_on:
   - source: github
     github: Losses/rune
+  - source: manual
+    manual: 1
 
 maintainers:
   - github: roaldclark
