rune-player-git: fix 'Insecure RUNPATH' with patchelf
Signed-off-by: Roald Clark <roaldclark@gmail.com>

--- a/archlinuxcn/rune-player-git/PKGBUILD
+++ b/archlinuxcn/rune-player-git/PKGBUILD
@@ -28,6 +28,7 @@ makedepends=(
     'flutter-target-linux'
     'flutter-tool'
     'git'
+    'patchelf'
     'protobuf'
     'protoc-gen-dart'
     'protoc-gen-prost'
@@ -85,6 +86,13 @@ package() {
     popd
     install -dm755 "$pkgdir/usr/bin"
     ln -sfrv "$pkgdir/usr/lib/$_pkgname/player" "$pkgdir/usr/bin/player"
+
+    # Fix rpath that causes 'Insecure RUNPATH'
+    for shared_lib in "$pkgdir/usr/lib/$_pkgname/lib"/*.so; do
+        [[ -z $(patchelf --print-rpath "$shared_lib") ]] && continue
+        [[ $(patchelf --print-rpath "$shared_lib") == '$ORIGIN' ]] && continue
+        patchelf --set-rpath '$ORIGIN' "$shared_lib"
+    done
 
     install -Dm644 "$srcdir/$_pkgname.desktop" -t "$pkgdir/usr/share/applications/"
 }
