simplescreenrecorder-git: add pipewire to depends

--- a/archlinuxcn/simplescreenrecorder-git/PKGBUILD
+++ b/archlinuxcn/simplescreenrecorder-git/PKGBUILD
@@ -11,7 +11,7 @@ license=("GPL-3.0-or-later")
 depends=("qt5-base" "qt5-x11extras"
 	"ffmpeg" "alsa-lib" "libpulse" "jack" "libgl" "glu" "v4l-utils"
 	"libx11" "libxext" "libxfixes" "libxi" "libxinerama"
-	"desktop-file-utils" "gtk-update-icon-cache")
+	"desktop-file-utils" "gtk-update-icon-cache" "pipewire")
 optdepends=("lib32-simplescreenrecorder-git: OpenGL recording of 32-bit applications")
 makedepends=("git" "cmake" "qt5-tools")
 source=("git+https://github.com/MaartenBaert/ssr.git")
