rune-player-git: rebuild
* Modify flutter-engine-common-google-bin,
         flutter-engine-linux-google-bin,
         flutter-material-fonts-google-bin,
         flutter-sky-engine-google-bin
  to the correct pkgbase (flutter-artifacts-google-bin)

Signed-off-by: Roald Clark <roaldclark@gmail.com>

--- a/archlinuxcn/rune-player-git/lilac.yaml
+++ b/archlinuxcn/rune-player-git/lilac.yaml
@@ -5,12 +5,12 @@ post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
 repo_makedepends:
+  - flutter-artifacts-google-bin: flutter-engine-common-google-bin
+  - flutter-artifacts-google-bin: flutter-engine-linux-google-bin
+  - flutter-artifacts-google-bin: flutter-material-fonts-google-bin
+  - flutter-artifacts-google-bin: flutter-sky-engine-google-bin
   - flutter: flutter-common
-  - flutter: flutter-engine-common-google-bin
-  - flutter: flutter-engine-linux-google-bin
   - flutter: flutter-intellij-patch
-  - flutter: flutter-material-fonts-google-bin
-  - flutter: flutter-sky-engine-google-bin
   - flutter: flutter-target-linux
   - flutter: flutter-tool
   - protoc-gen-dart
