lceda-pro: update Name[en_US]
Co-authored-by: Integral <integral@member.fsf.org>

--- a/archlinuxcn/lceda-pro/PKGBUILD
+++ b/archlinuxcn/lceda-pro/PKGBUILD
@@ -67,7 +67,7 @@ GenericName=嘉立创EDA(专业版)
 Icon=lceda-pro
 Name=嘉立创EDA(专业版)
 Type=Application
-Name[en_US]=嘉立创EDA(专业版)
+Name[en_US]=LCEDA Pro
 MimeType=application/eprj
 EOF
     fi
