--- a/archlinuxcn/python-torchio/lilac.yaml
+++ b/archlinuxcn/python-torchio/lilac.yaml
@@ -6,6 +6,7 @@ build_prefix: extra-x86_64
 repo_depends:
   - python-nibabel
   - simpleitk: python-simpleitk
+  - simpleitk: simpleitk
 
 update_on:
   - source: github
