--- a/archlinuxcn/python-biliass/PKGBUILD
+++ b/archlinuxcn/python-biliass/PKGBUILD
@@ -5,18 +5,18 @@ _pkgname=biliass
 pkgver=1.3.13
 pkgrel=1
 pkgdesc='A tool to convert Bilibili XML/protobuf comments to ASS subtitles'
-arch=('any')
-url='https://github.com/yutto-dev/biliass'
-license=('GPL-3.0-only')
+arch=('x86_64')
+url='https://github.com/yutto-dev/yutto/tree/main/packages/biliass'
+license=('GPL-3.0-or-later')
 depends=(
+    'gcc-libs'
+    'glibc'
     'python'
-    'python-protobuf'
 )
 makedepends=(
     'python-build'
-    'python-hatchling'
     'python-installer'
-    'python-poetry-core'
+    'python-maturin'
     'python-wheel'
 )
 source=("https://pypi.io/packages/source/${_pkgname:0:1}/${_pkgname}/${_pkgname}-${pkgver}.tar.gz")
