--- a/archlinuxcn/ruyi/PKGBUILD
+++ b/archlinuxcn/ruyi/PKGBUILD
@@ -45,9 +45,11 @@ optdepends=(
 source=(
   "${pkgname}-${pkgver}.tar.gz::https://github.com/ruyisdk/ruyi/archive/refs/tags/${pkgver}.tar.gz"
   "ruyi"
+  "config.toml"
 )
 sha512sums=('374f07af1b583ec601458eb745b79d942db55ae98040dd1ed0bbfdddfeef3b9ccd5b17eb31376d53ffed0dea0fe96d98bc5f1b81ab0ea91ab339c06f3a8e8939'
-            '49d2d53b91e343d029d20b4830098dbcfb04161d323f6fa9c3e1fdc0c02df1335871d0f44627916e076a2062fcb97d52ea87368e6cabc0d7167591022ce293ea')
+            '49d2d53b91e343d029d20b4830098dbcfb04161d323f6fa9c3e1fdc0c02df1335871d0f44627916e076a2062fcb97d52ea87368e6cabc0d7167591022ce293ea'
+            '03b9a18c495c37203e5c56518e1ab94118b3bf99e83c99924f3eeca7be64ac3b03d744c105ac99ab703c40e570195a7ed39785e5beef5f619bdf868bd6add6f6')
 provides=(python-ruyi)
 
 build() {
@@ -70,5 +72,6 @@ package() {
   install -Dm644 README.md -t "${pkgdir}/usr/share/doc/${pkgname}/"
   install -Dm644 LICENSE*.txt "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 
+  install -Dm644 ../config.toml -t "${pkgdir}/usr/share/${pkgname}/"
   install -Dm755 ../ruyi "${pkgdir}/usr/bin/ruyi"
 }
