firefox-tridactyl-native: bump epoch
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/archlinuxcn/firefox-tridactyl-native/PKGBUILD
+++ b/archlinuxcn/firefox-tridactyl-native/PKGBUILD
@@ -2,6 +2,8 @@
 # Contributor: Zhanibek Adilbekov <zhanibek.adilbekov@pm.me>
 
 pkgname=firefox-tridactyl-native
+# someone packaging it with the version of extension (1.x)
+epoch=1
 pkgver=0.5.0
 pkgrel=1
 pkgdesc="Tridactyl native messaging host application for Firefox."
