--- a/archlinuxcn/gcalcli/lilac.yaml
+++ b/archlinuxcn/gcalcli/lilac.yaml
@@ -1,10 +1,12 @@
 build_prefix: extra-x86_64
-pre_build_script: aur_pre_build(maintainers=['ainola'])
+pre_build_script: aur_pre_build(maintainers=['ainola', 'mu_mind'])
 post_build: aur_post_build
 update_on:
   - source: aur
     aur: gcalcli
   - alias: python
+  - source: manual
+    manual: 1
 
 maintainers:
   - github: roaldclark
