gnome-pomodoro: add missing conflict gnome-shell-pomodoro

--- a/archlinuxcn/gnome-pomodoro/PKGBUILD
+++ b/archlinuxcn/gnome-pomodoro/PKGBUILD
@@ -22,6 +22,7 @@ provides=(
   'libsounds.so'
 )
 replaces=('gnome-shell-pomodoro')
+conflicts=('gnome-shell-pomodoro')
 depends=(
   'gnome-shell>=40.0'
   'hicolor-icon-theme'
