--- a/archlinuxcn/flutter/lilac.yaml
+++ b/archlinuxcn/flutter/lilac.yaml
@@ -8,5 +8,10 @@ update_on:
   - source: aur
     aur: flutter
 
+  - source: github
+    github: flutter/flutter
+    use_latest_tag: true
+    exclude_regex: ".*pre"
+
   - source: alpm
     alpm: dart
