--- a/archlinuxcn/flutter/lilac.yaml
+++ b/archlinuxcn/flutter/lilac.yaml
@@ -12,7 +12,7 @@ update_on:
 
   - source: github
     github: flutter/flutter
-    use_latest_tag: true
+    use_max_tag: true
     exclude_regex: ".*pre"
 
   - source: alpm
