--- a/archlinuxcn/extra-cmake-modules-git/PKGBUILD
+++ b/archlinuxcn/extra-cmake-modules-git/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=6.8.0.r3734.21158fbc
 pkgrel=1
 pkgdesc="Extra modules and scripts for CMake. (GIT version)"
 arch=('any')
-url="https://projects.kde.org/projects/kdesupport/${_pkgname}"
+url="https://community.kde.org/Frameworks"
 license=('LGPL')
 groups=('kf6-git')
 depends=('cmake')
@@ -16,16 +16,12 @@ makedepends=(
 	'git'
 	'python-sphinx'
 	'python-requests'
-	'qt5-base'
-)
-checkdepends=(
-	'reuse'
-	'qt5-tools'
-	'qt5-base'
-	'qt5-declarative'
+	'qt6-tools'
+	'qt6-base'
+	'qt6-declarative'
 )
 conflicts=("${_pkgname}")
-provides=("${_pkgname}=${pkgver%%.r*}")
+provides=("${_pkgname}")
 optdepends=(
 	'python-pyxdg: to generate fastlane metadata for Android apps'
 	'python-requests: to generate fastlane metadata for Android apps'
@@ -37,12 +33,7 @@ sha256sums=('SKIP')
 
 pkgver() {
 	cd "${_pkgname}/"
-	_ver="$(cat CMakeLists.txt | grep -m1 'set(VERSION' | grep -o "[[:digit:]]*" | paste -sd'.')"
-	echo "${_ver}.r$(git rev-list --count HEAD).$(git rev-parse --short HEAD)"
-}
-
-prepare() {
-	sed 's|frameworks/||g' -i "${_pkgname}/tests/KDEFetchTranslations/CMakeLists.txt"
+	git describe --long --tags --abbrev=7 | sed 's/\([^-]*-g\)/r\1/;s/-/./g;s/v//'
 }
 
 build() {
@@ -50,7 +41,8 @@ build() {
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DBUILD_QTHELP_DOCS=ON \
-		-DBUILD_TESTING=ON
+		-DBUILD_TESTING=ON \
+		-DQT_MAJOR_VERSION=6
 
 	cmake --build build
 }
