--- a/archlinuxcn/extra-cmake-modules-git/PKGBUILD
+++ b/archlinuxcn/extra-cmake-modules-git/PKGBUILD
@@ -6,6 +6,7 @@ pkgname=extra-cmake-modules-git
 _pkgname=${pkgname%-git}
 pkgver=6.8.0.r3734.21158fbc
 pkgrel=1
+epoch=1
 pkgdesc="Extra modules and scripts for CMake. (GIT version)"
 arch=('any')
 url="https://community.kde.org/Frameworks"
