alarmcn/extra-cmake-modules-git: bump epoch

--- a/alarmcn/extra-cmake-modules-git/PKGBUILD
+++ b/alarmcn/extra-cmake-modules-git/PKGBUILD
@@ -6,6 +6,7 @@ pkgname=extra-cmake-modules-git
 _pkgname=${pkgname%-git}
 pkgver=6.7.0.r3728.b86907d5
 pkgrel=1
+epoch=1
 pkgdesc="Extra modules and scripts for CMake. (GIT version)"
 arch=('any')
 url="https://community.kde.org/Frameworks"
