alarmcn/bcachefs-tools-git: add 2-hour time limit

--- a/alarmcn/bcachefs-tools-git/lilac.yaml
+++ b/alarmcn/bcachefs-tools-git/lilac.yaml
@@ -8,6 +8,8 @@ pre_build_script: |
 
 post_build_script: git_pkgbuild_commit()
 
+time_limit_hours: 2
+
 update_on:
   - source: github
     github: koverstreet/bcachefs-tools
