--- a/archlinuxcn/flutter/lilac.yaml
+++ b/archlinuxcn/flutter/lilac.yaml
@@ -2,17 +2,13 @@ maintainers:
   - github: Integral-Tech
     email: integral@archlinuxcn.org
 
-post_build_script: |
-  aur_post_build()
-  git_pkgbuild_commit()
+pre_build_script: update_pkgver_and_pkgrel(_G.newver)
+post_build_script: git_pkgbuild_commit()
 
 update_on:
-  - source: aur
-    aur: flutter
-
   - source: github
     github: flutter/flutter
-    use_max_tag: true
+    use_latest_tag: true
     exclude_regex: ".*pre"
 
   - source: alpm
