--- a/archlinuxcn/flutter/lilac.yaml
+++ b/archlinuxcn/flutter/lilac.yaml
@@ -9,7 +9,7 @@ update_on:
   - source: github
     github: flutter/flutter
     use_latest_tag: true
-    exclude_regex: ".*pre"
+    exclude_regex: ".*pre.*"
 
   - source: alpm
     alpm: dart
