flutter: use max tag instead of the latest tag

--- a/archlinuxcn/flutter/lilac.yaml
+++ b/archlinuxcn/flutter/lilac.yaml
@@ -8,7 +8,7 @@ post_build_script: git_pkgbuild_commit()
 update_on:
   - source: github
     github: flutter/flutter
-    use_latest_tag: true
+    use_max_tag: true
     exclude_regex: ".*pre.*"
 
   - source: alpm
