alarmcn/flutter: switch update source to github only

--- a/alarmcn/flutter/PKGBUILD
+++ b/alarmcn/flutter/PKGBUILD
@@ -16,7 +16,7 @@ pkgdesc="A new mobile app SDK to help developers and designers build modern mobi
 _pkgdesc="Flutter SDK component"
 arch=("x86_64" "aarch64")
 url="https://${_group}.dev"
-license=("custom" "BSD" "CCPL")
+license=('BSD-3-Clause')
 makedepends=(
 	"dart>=${_dartver[0]}"
 	"dart<${_dartver[1]}"
