--- a/alarmcn/flutter/lilac.yaml
+++ b/alarmcn/flutter/lilac.yaml
@@ -2,16 +2,10 @@ maintainers:
   - github: Integral-Tech
     email: integral@archlinuxcn.org
 
-pre_build_script: |
-  aur_pre_build(maintainers=['frealgagu','WithTheBraid','PolarianDev'])
-  update_pkgver_and_pkgrel(_G.newver)
-
+pre_build_script: update_pkgver_and_pkgrel(_G.newver)
 post_build_script: git_pkgbuild_commit()
 
 update_on:
-  - source: aur
-    aur: flutter
-
   - source: github
     github: flutter/flutter
     use_max_tag: true
