--- a/archlinuxcn/flutter-artifacts-google-bin/lilac.yaml
+++ b/archlinuxcn/flutter-artifacts-google-bin/lilac.yaml
@@ -2,8 +2,11 @@ maintainers:
   - github: Integral-Tech
     email: integral@archlinuxcn.org
 
-post_build: aur_post_build
+pre_build_script: update_pkgver_and_pkgrel(_G.newver)
+post_build_script: git_pkgbuild_commit()
 
 update_on:
-  - source: aur
-    aur: flutter-engine-linux-google-bin
+  - source: github
+    github: flutter/flutter
+    use_max_tag: true
+    exclude_regex: ".*pre.*"
