--- a/archlinuxcn/python-sentencepiece/lilac.yaml
+++ b/archlinuxcn/python-sentencepiece/lilac.yaml
@@ -12,6 +12,7 @@ update_on:
     use_latest_release: true
   - source: manual
     manual: 1
+  - alias: protobuf
   - alias: python
 # vim:set ts=2 sw=2 et:
 
