--- a/archlinuxcn/video2x/lilac.yaml
+++ b/archlinuxcn/video2x/lilac.yaml
@@ -13,3 +13,7 @@ update_on:
   - source: github
     github: k4yt3x/video2x
     use_latest_tag: true
+
+  - source: alpm
+    alpm: spdlog
+    provided: libspdlog.so
