libpasastro: fix gcc14 build

--- a/archlinuxcn/libpasastro/PKGBUILD
+++ b/archlinuxcn/libpasastro/PKGBUILD
@@ -3,22 +3,28 @@
 
 pkgname=libpasastro
 pkgver=1.4.2
-pkgrel=1
+pkgrel=2
 _pkgver="v$pkgver"
 pkgdesc="Provide Pascal interface for standard astronomy libraries"
 arch=('x86_64')
-url="http://www.sourceforge.net/projects/libpasastro/"
-license=('GPL')
+url="https://github.com/pchev/libpasastro"
+license=('GPL-2.0-or-later')
 depends=('gcc-libs')
 makedepends=('git')
 options=()
-source=("git+https://github.com/pchev/libpasastro.git#tag=$_pkgver")
-sha256sums=('SKIP')
+source=("git+https://github.com/pchev/libpasastro.git#tag=$_pkgver"
+"https://github.com/pchev/libpasastro/pull/3.patch"
+)
+sha256sums=('SKIP'
+"271ad2f7fd0ff4d8dfd6004cae563abfa5d2d1ba257947f8848215a30f8de0ef"
+)
 
 build() {
   cd $srcdir/$pkgname
   # fix: gcc complains if output directory does not exist
   mkdir -p plan404/obj
+  # fix gcc14 issues
+  patch -p1 -i ../3.patch
   make -j
 }
 
