--- a/archlinuxcn/python-expiring-dict/PKGBUILD
+++ b/archlinuxcn/python-expiring-dict/PKGBUILD
@@ -9,10 +9,13 @@ arch=('any')
 url='https://pypi.org/project/expiring-dict'
 license=('MIT')
 depends=(
-  python
+  python-sortedcontainers
 )
 makedepends=(
+  python-build
   python-setuptools
+  python-installer
+  python-wheel
 )
 source=("${_pkgname}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_pkgname::1}/${_pkgname}/${_pkgname}-${pkgver}.tar.gz"
         "https://github.com/dparker2/py-expiring-dict/raw/master/LICENSE"
@@ -22,12 +25,12 @@ sha512sums=('b5985e8b68845bfce9106406d6d335a5fa1d75898a7aa56d311d3cf5d1d2429818e
 
 build() {
   cd "${_pkgname}-${pkgver}"
-  python setup.py build
+  python -m build --wheel --no-isolation
 }
 
 package() {
   cd "${_pkgname}-${pkgver}"
-  python setup.py install --root="${pkgdir}" --optimize=1 --skip-build
+  python -m installer --destdir="${pkgdir}" dist/*.whl
   install -Dm644 "${srcdir}/LICENSE" -t "${pkgdir}/usr/share/licenses/${pkgname}"
 }
 # vim:set ts=2 sw=2 et:
