rune-player-git: rebuild
- Add gdk-pixbuf2, harfbuzz and zlib to depends
- Remove lmdb from depends
- Modify LDFLAGS to include '-Wl,--no-as-needed' during build

Signed-off-by: Roald Clark <roaldclark@gmail.com>

--- a/archlinuxcn/rune-player-git/PKGBUILD
+++ b/archlinuxcn/rune-player-git/PKGBUILD
@@ -15,13 +15,15 @@ depends=(
     'dbus'
     'fontconfig'
     'gcc-libs'
+    'gdk-pixbuf2'
     'glib2'
     'glibc'
     'gtk3'
+    'harfbuzz'
     'hicolor-icon-theme'
     'libepoxy'
-    'lmdb'
     'pango'
+    'zlib'
 )
 makedepends=(
     'flutter-intellij-patch'
@@ -56,6 +58,7 @@ prepare() {
 
 build() {
     cd "${srcdir}/${_pkgname}"
+    export LDFLAGS="${LDFLAGS} -Wl,--no-as-needed"
     export RUSTUP_TOOLCHAIN=stable
     export CARGO_TARGET_DIR=target
     flutter pub run rinf message
