--- a/archlinuxcn/rune-player-git/rune-player.desktop
+++ b/archlinuxcn/rune-player-git/rune-player.desktop
@@ -4,8 +4,8 @@ Name=Rune Player
 GenericName=Music Player
 Comment=Unique modern music player
 Icon=rune
-Exec=player %U
-TryExec=/usr/bin/player
+Exec=rune %U
+TryExec=/usr/bin/rune
 Terminal=false
 Categories=AudioVideo;Player;
 Keywords=rune;player;rune-player;Music;
